--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
         "sass-loader": "^11.0.1",
         "vue": "^2.6.12",
         "vue-loader": "^15.9.7",
+        "vue-resource": "^1.5.3",
         "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "jquery": "^3.6.0",
+        "popper.js": "^1.16.1"
     }
 }
